objects/AW_Outstanding_Requirement__c.object
<CustomObject>
    <description>This is an object to store external workflow tasks retrieved from external system(s). These represent outstanding items requested by advisers to the fulfilment team.</description>
    <fields>
        <fullName>AW_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the related account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Outstanding Requirements</relationshipLabel>
        <relationshipName>Outstanding_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An adviser will select this checkbox to indicate that this client’s work has been completed.</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_ContractNumber__c</fullName>
        <description>Contract Number for the requirement</description>
        <label>Contract Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Description__c</fullName>
        <description>Description of the requirement</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_IdentityNumber__c</fullName>
        <description>ID of the requirement</description>
        <label>Identity Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Initials__c</fullName>
        <description>Initials of Adviser</description>
        <label>Initials</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Key__c</fullName>
        <description>Key for the requirement</description>
        <label>Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_LastName__c</fullName>
        <description>Last Name of adviser</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_MasterAccountId__c</fullName>
        <description>Used to store the Master Account Id, if Master Account Exists for the Active Account</description>
        <formula>IF(AND(ISPICKVAL(AW_Account__r.FinServ__Status__c,&apos;Active&apos;),NOT(ISNULL(AW_Account__r.AW_ParentAccount__r.Id))),AW_Account__r.AW_ParentAccount__r.Id,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AW_MasterAccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_MasterAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the Master Account Details</description>
        <label>MasterAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Outstanding Requirements (MasterAccount)</relationshipLabel>
        <relationshipName>Outstanding_Requirements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Outstanding Requirements</relationshipLabel>
        <relationshipName>Outstanding_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_ParentAccountOwnerId__c</fullName>
        <description>Used to store the Parent Account Owner Id</description>
        <formula>IF(NOT(ISNULL(AW_Account__r.Id)),AW_Account__r.OwnerId,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AW_ParentAccountOwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Pinball_Code__c</fullName>
        <description>This field stores the Pinball Code Status.</description>
        <label>Pinball Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ProcessingStatus__c</fullName>
        <description>Select processing status</description>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Underwriting requirements outstanding</fullName>
                </value>
                <value>
                    <fullName>Underwriting requirements completed</fullName>
                </value>
                <value>
                    <fullName>Awaiting outstanding requirements</fullName>
                </value>
                <value>
                    <fullName>Referred to operations</fullName>
                </value>
                <value>
                    <fullName>Invalidated</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Policy loaded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_RequirementDate__c</fullName>
        <description>Date in which the requirement was generated</description>
        <label>Requirement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_Role__c</fullName>
        <description>Role of the related account</description>
        <label>Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Source__c</fullName>
        <description>Source Name</description>
        <label>Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Status__c</fullName>
        <description>Status of the requirement</description>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_UpdateISN__c</fullName>
        <description>Update ISN (External ID)</description>
        <externalId>true</externalId>
        <label>Update ISN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Outstanding Requirement</label>
    <listViews>
        <fullName>AW_CompletedWorkflowTasks</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>AW_Description__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>AW_Account__c</columns>
        <columns>AW_Pinball_Code__c</columns>
        <columns>AW_ProcessingStatus__c</columns>
        <columns>AW_RequirementDate__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>AW_Completed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>AW_ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Approved,Policy loaded</value>
        </filters>
        <label>My Completed Outstanding Requirements</label>
    </listViews>
    <listViews>
        <fullName>AW_DeclinedWorkflowTasks</fullName>
        <columns>NAME</columns>
        <columns>AW_Description__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>AW_Account__c</columns>
        <columns>AW_Pinball_Code__c</columns>
        <columns>AW_ProcessingStatus__c</columns>
        <columns>AW_RequirementDate__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>AW_ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Invalidated,Declined</value>
        </filters>
        <label>My Declined Outstanding Requirements</label>
    </listViews>
    <listViews>
        <fullName>AW_My_Outstanding_Requirements</fullName>
        <columns>NAME</columns>
        <columns>AW_Description__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>AW_Account__c</columns>
        <columns>AW_Pinball_Code__c</columns>
        <columns>AW_ProcessingStatus__c</columns>
        <columns>AW_RequirementDate__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Outstanding Requirements</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AW_Description__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>AW_Account__c</columns>
        <columns>AW_Pinball_Code__c</columns>
        <columns>AW_ProcessingStatus__c</columns>
        <columns>AW_RequirementDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Outstanding Requirements</label>
    </listViews>
    <nameField>
        <displayFormat>OR-{0000}</displayFormat>
        <label>Outstanding Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outstanding Requirements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>